base/argocd/namespace.yaml
# base/argocd/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
