base/argocd/service.yaml
# base/argocd/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
  namespace: argocd
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  - name: https
    port: 8083
    targetPort: 8083
    protocol: TCP
  selector:
    app.kubernetes.io/name: argocd-server
